# sandbox

./: .clang-format  .clang-tidy  .clangd  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  StructLayoutSettings.json
ci/: analyse_log.sh
cmake/: cpm.cmake  dependencies.cmake  static_analysis.cmake
cmd/: CMakeLists.txt  main.cc
doc/: Doxyfile
include/sandbox/: common.h  configuration.h
include/sandbox/dummygroup/: dummygroup.h
lib/: CMakeLists.txt
lib/dummygroup/: dummyclass.cc  dummyclass.h  dummygroup.cc
sandbox/: CMakeLists.txt
sandbox/implementation/: CMakeLists.txt  main.cc
sandbox/implementation/common/: CMakeLists.txt
sandbox/implementation/plugin/: CMakeLists.txt
sandbox/implementation/plugin/vst/: AppConfig.h  CMakeLists.txt  JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
sandbox/implementation/standalone/: CMakeLists.txt  main.cc
sandbox/implementation/ui/: CMakeLists.txt  imguiitem.cc  imguiitem.h  main.cc  main.qml  nodegraph.cc  nodegraph.h  nodegraph_helper.cc  nodegraph_helper.h  sandbox.cc  sandbox.h  sandbox.ui
sandbox/src/: CMakeLists.txt  common.h  configuration.h
sandbox/src/context/: CMakeLists.txt  context.cc  context.h  context_vulkan.cc  context_vulkan.h
sandbox/src/dummygroup/: CMakeLists.txt  dummyclass.cc  dummyclass.h
sandbox/src/geometry/: CMakeLists.txt  geometry.cc  geometry.h
sandbox/src/physics/: CMakeLists.txt  context.cc  context.h
sandbox/tests/: CMakeLists.txt  main.cc
sandbox/tests/dummygroup/: CMakeLists.txt  dummyclass.cc  tests_dummyclass.cc
scripts/: analyse_log.sh  create_project.py
test/: CMakeLists.txt  test.cpp
